# AtCoderProblems

./: .dockerignore  .gitignore  .project  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.crawler  LICENSE  Makefile  README.md  api.go  atcoder_api.go  cache.php  codecov.yml  compose.yaml  crawl_contest.php  crawl_problems.php  crawl_submissions.php  crawler.go  docker-compose.yml  exec_faster.php  fast_json_generator.go  html.inc  index.php  main.go  maintainer.go  manual_crawl_submissions.php  practice.php  refresh_submissions.php  score_edge.php  score_user.php  search.php  seek_contest.php  sql.php  test.php  tmp.php  tmp.py  user.php
atcoder-problems-api-lambda/: Cargo.toml  build.sh
atcoder-problems-api-lambda/src/: lib.rs  main.rs
atcoder-problems-backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.sbt  docker-compose.yml  docker-deploy.sh  pack_bootstrap.sh
atcoder-problems-backend/assets/: contests
atcoder-problems-backend/atcoder-client/: .travis.yml  Cargo.toml  README.md  hidden_contest.json
atcoder-problems-backend/atcoder-client/src/: atcoder.rs  error.rs  lib.rs  util.rs
atcoder-problems-backend/atcoder-client/test_resources/: abc107_submissions  abc107_tasks  atc002_tasks  contests  contests_permanent
atcoder-problems-backend/crawler/: Cargo.toml
atcoder-problems-backend/crawler/src/: client.rs  error.rs  lib.rs  parser.rs  types.rs
atcoder-problems-backend/crawler/tests/: test_parser.rs
atcoder-problems-backend/s3/: Cargo.toml
atcoder-problems-backend/s3-client/: Cargo.toml
atcoder-problems-backend/s3-client/src/: s3.rs
atcoder-problems-backend/s3/src/: lib.rs
atcoder-problems-backend/scripts/: sql-backup.sh
atcoder-problems-backend/server-db/: Cargo.toml
atcoder-problems-backend/server-db/src/: internal_user.rs  lib.rs  problem_list.rs  progress_reset.rs  ranking.rs  submissions.rs  virtual_contest.rs
atcoder-problems-backend/sql-client/: Cargo.toml
atcoder-problems-backend/sql-client/src/: accepted_count.rs  contest_problem.rs  error.rs  first_ac_submissions.rs  intensive_accepted_count.rs  language_count.rs  lib.rs  models.rs  problem_info.rs  problems_submissions.rs  rated_point_sum.rs  simple_client.rs  streak.rs  submission_client.rs  utils.rs
atcoder-problems-backend/sql-client/tests/: test_accepted_count.rs  test_contest_problem.rs  test_first_ac_submissions.rs  test_intensive_accepted_count.rs  test_language_count.rs  test_problem_info.rs  test_problem_list_manager.rs  test_problems_submissions.rs  test_progress_reset_manager.rs  test_rated_point_sum.rs  test_simple_client.rs  test_streak.rs  test_submission_client.rs  test_user_manager.rs  test_virtual_contest_manager.rs
atcoder-problems-backend/sql-entities/: Cargo.toml
atcoder-problems-backend/src/: api.rs  config.rs  crawler.rs  crawler_utils.rs  error.rs  lambda.rs  lib.rs  main.rs  s3.rs  scraper.rs  server.rs  sql.rs  updater.rs  utils.rs
atcoder-problems-backend/src/api/: lambda.rs  user_info.rs
atcoder-problems-backend/src/crawler/: fix_crawler.rs  mod.rs  problem_crawler.rs  recent_crawler.rs  utils.rs  virtual_contest_crawler.rs  whole_contest_crawler.rs
atcoder-problems-backend/src/lambda/: database_update.rs  io.rs  time_submissions.rs  user_info.rs  user_submissions.rs
atcoder-problems-backend/src/scraper/: contest.rs  problem.rs  results.rs  submission.rs
atcoder-problems-backend/src/server/: accepted_count_ranking.rs  app_state.rs  auth.rs  error.rs  internal_user.rs  language_count.rs  language_count_ranking.rs  middleware.rs  mod.rs  problem_list.rs  progress_reset.rs  rated_point_sum_ranking.rs  services.rs  streak_ranking.rs  time_submissions.rs  user_info.rs  user_submissions.rs  utils.rs  virtual_contest.rs
atcoder-problems-backend/src/sql/: accepted_count.rs  client.rs  contest_problem.rs  delta_update.rs  internal.rs  language_count.rs  mod.rs  models.rs  problem_info.rs  problem_info_aggregator.rs  problems_submissions.rs  rated_point_sum.rs  schema.rs  simple_client.rs  streak.rs  submission_client.rs  (+1 more)
atcoder-problems-backend/tests/: test_accepted_count.rs  test_contest_problem.rs  test_crawler_utils.rs  test_first_ac_submission.rs  test_language_count.rs  test_problem_info.rs  test_problem_info_aggregator.rs  test_problems_submissions.rs  test_rated_point_sum.rs  test_server_authorize.rs  test_server_cascade.rs  test_server_e2e.rs  test_server_e2e_ac_ranking.rs  test_server_e2e_internal.rs  test_server_e2e_language_count.rs  test_server_e2e_language_count_ranking.rs  test_server_e2e_language_ranking.rs  test_server_e2e_problem_list.rs  test_server_e2e_progress_reset.rs  test_server_e2e_rated_point_sum_ranking.rs  test_server_e2e_streak_ranking.rs  test_server_e2e_submissions.rs  test_server_e2e_virtual_contest.rs  test_server_healthcheck.rs  test_server_internal_auth.rs  test_server_internal_user.rs  test_server_problem_list.rs  test_server_progress_reset.rs  test_server_ranking_ac.rs  test_server_ranking_language.rs  test_server_ranking_rated_point_sum.rs  test_server_ranking_streak.rs  test_server_submissions.rs  test_server_user_info.rs  test_server_virtual_contest.rs  test_simple_client.rs  test_sql.rs  test_streak.rs  test_submission_client.rs  test_virtual_contest_manager.rs  (+1 more)
atcoder-problems-dumper-lambda/: Cargo.toml
atcoder-problems-dumper-lambda/src/: lib.rs  main.rs  models.rs
atcoder-problems-monitor/: Cargo.toml
atcoder-problems-monitor/src/: main.rs
atcoder-problems-scraper/: .dockerignore  Cargo.toml  Dockerfile
atcoder-problems-scraper/assets/: abc107_submissions.html
atcoder-problems-scraper/src/: lib.rs  main.rs  models.rs  scraper.rs  sql.rs
atcoder-problems-updater-lambda/: Cargo.toml  build.sh
atcoder-problems-updater-lambda/src/: delta_updater.rs  lib.rs  main.rs  updater.rs
atcoder-problems-updater-lambda/tests/: sql_utils.rs  test_delta_updater.rs  test_updater.rs
backend/: Cargo.toml
backend/config/: log4rs.yaml
backend/env-test/: test.toml
backend/sql/: tables.sql
backend/src/: api.rs  conf.rs  db.rs  lib.rs  main.rs  scraper.rs
(+755 files in other folders)
