[package]
name = "atcoder-problems-api-lambda"
version = "0.1.0"
authors = ["Kenko Nakamura <kenkou.n@gmail.com>"]
edition = "2018"

[dependencies]
atcoder-problems-sql-common = { path = "../atcoder-problems-sql-common" }
lambda_runtime = "^0.1"
diesel = { version = "1.4.2", features = ["postgres"] }
openssl-probe = "0.1.2"
openssl = "*"
log = "^0.4"
simple_logger = "^1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
