[package]
name = "atcoder-problems-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
sql-entities.workspace = true
crawler.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
chrono.workspace = true
rand.workspace = true

[workspace]
members = ["crawler", "sql-entities"]

[workspace.dependencies]
reqwest = "0.12"
scraper = "0.23"
thiserror = "2.0"
sea-orm = "1.1"
tokio = "1.44"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
rand = "0.9"

crawler = { path = "./crawler" }
sql-entities = { path = "./sql-entities" }
