[package]
name = "atcoder-problems-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
crawler.workspace = true
rand.workspace = true
s3.workspace = true
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
sql-entities.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
async-trait = "0.1"
mockall = "0.13"
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
] }

[workspace]
members = ["crawler", "sql-entities", "s3"]

[workspace.dependencies]
aws-config = "1.6"
aws-sdk-s3 = "1.83"
bytes = "1.10"
chrono = "0.4"
rand = "0.9"
reqwest = "0.12"
scraper = "0.23"
sea-orm = "1.1"
serde = "1.0"
serde_json = "1.0"
testcontainers-modules = "0.11"
thiserror = "2.0"
tokio = "1.44"
tracing = "0.1"
tracing-subscriber = "0.3"

# Workspace crates
crawler = { path = "./crawler" }
sql-entities = { path = "./sql-entities" }
s3 = { path = "./s3" }
