[package]
name = "atcoder-problems-scraper"
version = "0.1.0"
authors = ["Kenko Nakamura <kenkou.n@gmail.com>"]
edition = "2018"

[dependencies]
scraper = "0.9"
reqwest = "0.9"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"
regex = "1"
postgres = "0.15"
env_logger = "0.6.1"
log = "0.4.6"
