[package]
name = "atcoder-problems-scraper"
version = "0.1.0"
authors = ["Kenko Nakamura <kenkou.n@gmail.com>"]
edition = "2018"

[dependencies]
scraper = "0.9"
reqwest = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
regex = "1"
env_logger = "0.6.1"
log = "0.4.6"
lambda_runtime = "^0.1"
openssl = "*"
diesel = { version = "1.4.2", features = ["postgres"] }
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
