[package]
name = "atcoder_problems"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]

[dependencies]
select = "0.4.2"
reqwest = "0.7.3"
regex = "0.2.2"
serde = "*"
serde_json = "1.0"
serde_derive = "1.0.15"
mysql = "*"
chrono = "0.4.0"
toml = "0.4.5"
rand = "0.3.16"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
