[package]
name = "atcoder-client"
version = "0.1.1"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
scraper = { version = "0.14", default-features = false }
chrono = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.25", default-features = false, features = ["macros"] }
