[package]
name = "sql-client"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
async-trait = "0.1.57"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
anyhow = "1.0"
tokio = { version = "1.24", features = ["macros"] }
regex = "1"
chrono = "0.4"
